--- a/README.Rmd
+++ b/README.Rmd
@@ -19,27 +19,20 @@ knitr::opts_chunk$set(
 ![downloads](http://cranlogs.r-pkg.org/badges/grand-total/longurl)
 
 
-longurl : Expand Short URLs using the 'URL-Expander' API
+longurl : Tools expand vectors of short URLs into long URLs.
 
 This does a bit more than [decode_short_url](https://github.com/geoffjentry/twitteR/blob/master/R/utils.R#L22-L31) from the [twitteR](https://github.com/geoffjentry/twitteR) package since it:
 
-- has an option to do a post-expand check with a `HEAD` request to ensure the resource exists (useful when you think longurl just failed to expand)
-- has an option to warn on expansion issues
+- doesn't rely on a URL expansion API (anymore)
 - has an option for progress bars
 - works with a vector of URLs
-- returns `data_frame`s
+- returns `tbl_df`s that include HTTP status code for final (expanded) URL
 
 The following functions are implemented:
 
-- `expand_urls`:	Expand a vector of (short) URLs using the longurl service
+- `expand_urls`:	Expand a vector of (short) URLs
 
 The following data sets are included:
-
-### News
-
-- Version `0.2.0` - See NEWS.md
-- Version `0.1.0` released ([CRAN](http://cran.r-project.org/web/packages/longurl/index.html)) ([GitHub](https://github.com/hrbrmstr/longurl/archive/v0.1.0.zip))
-- Version `0.0.0.9000` released
 
 ### Installation
 
@@ -67,9 +60,12 @@ test_urls <- c("http://t.co/D4C7aWYIiA",
                "ift.tt/1L2Llfr",
                "bit.ly/1GPr5w5",
                "http://l.dds.ec/1da152x",
-               "http://l.rud.is/seven")
+               "http://l.rud.is/seven",
+               "qrp://not a valid url/")
 
-head(expand_urls(test_urls), 2)
+expand_urls(test_urls) %>% 
+  select(orig_url, status_code, expanded_url) %>% 
+  knitr::kable()
 ```
 
 ### Test Results
