--- a/README.Rmd
+++ b/README.Rmd
@@ -1,97 +1,64 @@
 ---
 output: rmarkdown::github_document
 ---
-
-<!-- README.md is generated from README.Rmd. Please edit that file -->
-
-```{r options, echo = FALSE}
-knitr::opts_chunk$set(
-  collapse = TRUE,
-  comment = "#>",
-  fig.path = "README-"
-)
+```{r pkg-knitr-opts, include=FALSE}
+hrbrpkghelpr::global_opts()
 ```
-![](longurl.png)
 
-[![Build Status](https://travis-ci.org/hrbrmstr/longurl.svg)](https://travis-ci.org/hrbrmstr/longurl) 
-[![Project Status: Active - The project has reached a stable, usable state and is being actively developed.](http://www.repostatus.org/badges/0.1.0/active.svg)](http://www.repostatus.org/#active) 
-[![CRAN_Status_Badge](http://www.r-pkg.org/badges/version/longurl)](http://cran.r-project.org/web/packages/longurl) 
-![downloads](http://cranlogs.r-pkg.org/badges/grand-total/longurl)
+```{r badges, results='asis', echo=FALSE, cache=FALSE}
+hrbrpkghelpr::stinking_badges()
+```
 
-
-# longurl 
-
-Tools expand vectors of short URLs into long URLs.
-
-## Description
-
-This does a bit more than [decode_short_url](https://github.com/geoffjentry/twitteR/blob/master/R/utils.R#L22-L31) from the [twitteR](https://github.com/geoffjentry/twitteR) package since it:
-
-- doesn't rely on a URL expansion API (anymore)
-- has options for progress bars & display of warnings during URL checks
-- works with a vector of URLs
-- returns `tbl_df`s that include HTTP status code for final (expanded) URL
-
-Tools are provided to expand vectors of short URLs into long 'URLs'. 
-No 'API' services are used, which may mean that this operates more slowly than 
-'API' services do (since they usually cache results of expansions that every 
-user of the service requests). You can setup your own caching layer with the 
-'memoise' package if you wish to have a speedup during single sessions or add 
-larger dependencies, such as 'Redis', to gain a longer-term performance boost 
-at the expense of added complexity.
-
-## What's inside the tin?
+```{r description, results='asis', echo=FALSE, cache=FALSE}
+hrbrpkghelpr::yank_title_and_description()
+```
+## What's Inside The Tin
 
 The following functions are implemented:
 
-- `expand_urls`: Expand a vector of (short) URLs
+```{r ingredients, results='asis', echo=FALSE, cache=FALSE}
+hrbrpkghelpr::describe_ingredients()
+```
 
 ## Installation
 
-```{r install, eval=FALSE, message=FALSE, warning=FALSE}
-devtools::install_github("hrbrmstr/longurl")
-# OR
-install.packages("longurl")
-```
-
-```{r options_2, echo=FALSE, message=FALSE, warning=FALSE, error=FALSE}
-options(width=200)
+```{r install-ex, results='asis', echo=FALSE, cache=FALSE}
+hrbrpkghelpr::install_block()
 ```
 
 ## Usage
 
-```{r usage, message=FALSE, warning=FALSE}
+```{r vers, message=FALSE, warning=FALSE, error=FALSE, cache=FALSE}
 library(longurl)
-library(dplyr)
+library(magrittr)
 
-# current verison
+# current version
 packageVersion("longurl")
+```
 
-test_urls <- c("http://t.co/D4C7aWYIiA",
-               "1.usa.gov/1J6GNoW",
-               "ift.tt/1L2Llfr",
-               "bit.ly/1GPr5w5",
-               "http://l.dds.ec/1da152x",
-               "http://l.rud.is/seven",
-               "qrp://not a valid url/")
+```{r ex1}
+c(
+  "http://t.co/D4C7aWYIiA",
+  "1.usa.gov/1J6GNoW",
+  "ift.tt/1L2Llfr",
+  "bit.ly/1GPr5w5",
+  "http://l.dds.ec/1da152x",
+  "http://l.rud.is/seven",
+  "qrp://not a valid url/"
+) -> test_urls
 
 expand_urls(test_urls) %>% 
-  select(orig_url, status_code, expanded_url) %>% 
+  dplyr::select(orig_url, status_code, expanded_url) %>% 
   knitr::kable()
 ```
 
-### Test Results
+## longurl Metrics
 
-```{r test, message=FALSE, warning=FALSE}
-library(longurl)
-library(testthat)
-
-date()
-
-test_dir("tests/")
+```{r cloc, echo=FALSE}
+cloc::cloc_pkg_md()
 ```
 
-### Code of Conduct
+## Code of Conduct
 
-Please note that this project is released with a [Contributor Code of Conduct](CONDUCT.md). 
-By participating in this project you agree to abide by its terms.
+Please note that this project is released with a Contributor Code of Conduct. By participating in this project you agree to abide by its terms.
+
